<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="category_display"
        android:title="@string/category_display">

        <ListPreference
            android:key="pref_refresh_rate"
            android:title="@string/refresh_rate_title"
            android:summary="%s"
            android:entries="@array/refresh_rate_entries"
            android:entryValues="@array/refresh_rate_values"
            android:defaultValue="0" />

        <SwitchPreferenceCompat
            android:key="pref_dc_dimming"
            android:title="@string/dc_dimming_title"
            android:summary="@string/dc_dimming_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="pref_hbm"
            android:title="@string/hbm_title"
            android:summary="@string/hbm_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_slider"
        android:title="@string/category_slider">

        <ListPreference
            android:key="pref_slider_top"
            android:title="@string/slider_top_position_title"
            android:summary="%s"
            android:entries="@array/alert_slider_mode_entries"
            android:entryValues="@array/alert_slider_mode_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="pref_slider_middle"
            android:title="@string/slider_middle_position_title"
            android:summary="%s"
            android:entries="@array/alert_slider_mode_entries"
            android:entryValues="@array/alert_slider_mode_values"
            android:defaultValue="1" />

        <ListPreference
            android:key="pref_slider_bottom"
            android:title="@string/slider_bottom_position_title"
            android:summary="%s"
            android:entries="@array/alert_slider_mode_entries"
            android:entryValues="@array/alert_slider_mode_values"
            android:defaultValue="2" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_touch"
        android:title="@string/category_touch">

        <SwitchPreferenceCompat
            android:key="pref_dt2w"
            android:title="@string/touchscreen_gesture_dt2w_title"
            android:summary="@string/touchscreen_gesture_dt2w_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_game_mode"
            android:title="@string/touch_game_mode_title"
            android:summary="@string/touch_game_mode_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="pref_edge_limit"
            android:title="@string/edge_limit_title"
            android:summary="@string/edge_limit_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_gestures"
            android:title="@string/screen_off_gestures_title"
            android:summary="@string/screen_off_gestures_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_vibration"
        android:title="@string/category_vibration">

        <SeekBarPreference
            android:key="pref_vib_strength"
            android:title="@string/vibrator_strength_title"
            android:summary="@string/vibrator_strength_summary"
            android:defaultValue="80"
            android:max="100"
            android:min="1" />

    </PreferenceCategory>

</PreferenceScreen>
